--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flame: ^1.14.0
+  flame: ^1.15.0
+  flame_forge2d: ^0.16.0+5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  forge2d: ^0.12.2
   flame_audio: ^2.1.8
 
 dev_dependencies:
